--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,7 +24,7 @@
                 </li>
 
                 <li>
-                    <a href="{{ site.baseurl }}/open/">开源</a>
+                    <a href=""{{ "/search/css/cb-search.css" | prepend: site.baseurl }}">开源</a>
                 </li>
 
                 <li>
