--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,8 +24,10 @@
                 </li>
 
                 <li>
-                    <a href=""{{ "/search/css/cb-search.css" | prepend: site.baseurl }}">开源</a>
+                    <a href="{{ "/search/css/cb-search.css" | prepend: site.baseurl }}">开源</a>
                 </li>
+
+
 
                 <li>
                     <a href="{{ site.baseurl }}/tags/">标签</a>
