--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,6 +26,9 @@
                     <a href="{{ site.baseurl }}/apps/">应用</a>
                 </li>
 
+            <!--<li>
+                    <a href="{{ site.baseurl }}/open/">开源</a>
+                </li> -->
 
                 <li>
                     <a href="{{ site.baseurl }}/tags/">标签</a>
