--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -92,7 +92,7 @@
 </div>
 
 <div style="position: fixed; right: 16px; bottom: 20px;">
-    <img src="/search/img/cb-search.svg"  id="cb-search-btn"  title="双击ctrl试一下"/>
+    <img src="/search/img/search.svg"  id="cb-search-btn"  title="双击ctrl试一下"/>
 </div>
 
 <link rel="stylesheet" href="{{ "/search/css/cb-search.css" | prepend: site.baseurl }}">
