--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
 
 <link rel="alternate" type="application/rss+xml"
-  href="feed.xml" title="娄永坤">
+  href="feed.xml" title="娄永坤blog">
     <!-- Custom Fonts -->
     <link href="//cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
