--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keyword"  content="LYK, LYK Blog, 娄永坤的博客, louyongkun, 娄永坤, lykqq, Windows, office">
     <meta name="description" content="{{ site.description }}">
-    <link rel="shortcut icon" href="/img/favicon.ico">
+	<link rel="icon" href="/img/favicon.ico">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/ico">
+    <link rel="apple-touch-icon" href="/img/favicon.ico" type="image/ico">
+    <link rel="apple-touch-icon-precomposed" href="/img/favicon.ico" type="image/ico">
+	
 
     <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
 
